# VapourSynth-Waifu2x-caffe

./: LICENSE  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
Waifu2x-caffe/: Waifu2x-caffe.cpp  Waifu2x-caffe.vcxproj  Waifu2x-caffe.vcxproj.filters  cNet.cpp  cNet.h  layer.h  stImage.cpp  stImage.h  waifu2x.cpp  waifu2x.h
Waifu2x-caffe/models/upconv_7_anime_style_art_rgb/: noise0_scale2.0x_model.json.caffemodel  noise1_scale2.0x_model.json.caffemodel  noise3_scale2.0x_model.json.caffemodel  scale2.0x_model.json.caffemodel
Waifu2x-caffe/models/upconv_7_photo/: noise0_scale2.0x_model.json.caffemodel  noise1_scale2.0x_model.json.caffemodel  noise2_scale2.0x_model.json.caffemodel  noise3_scale2.0x_model.json.caffemodel  scale2.0x_model.json.caffemodel
